# FTPsimulation

./: .project  README.md  TODO.txt
FTPclient/: .project  TODO.md  makefile
FTPclient/src/client/: Main.java  Main.kt
FTPclient/src/commands/: ICommand.java
FTPclient/src/connection/: CommandConnection.java  DataConnection.java
FTPclient/src/r0p3/: Command.java  FileTransfer.java  FtpClient.java  Main.java  StatusCode.java
FTPserver/rust_server/ftp_server/src/: main.rs
FTPserver/rust_server/ftp_server/src/ftp/: command.rs  handler_read.rs  handler_write.rs  handlers.rs  mod.rs  response.rs
FTPserver/rust_server/ftp_server/src/tcp/: mod.rs
FTPserver/src/networking/: SocketServer.java
FTPserver/src/server/: Main.java
ftp-client/: build.gradle
ftp-client-gui/src/main/kotlin/com/example/demo/: FTPClient.kt  things.md
ftp-client-gui/src/main/kotlin/com/example/demo/extensions/: ViewExtensions.kt
ftp-client-gui/src/main/kotlin/com/example/demo/models/: Folder.kt  SocketAddress.kt
ftp_server/: .gitignore  Cargo.toml  DEPRECATED_PIECES  README.md
ftp_server/etc/: users.json
ftp_server/old/: .project
ftp_server/root/n/: eyeyey  pasv  temporal
ftp_server/root/n/test/: monke.jaja
ftp_server/root/username/: thing.txt
ftp_server/src/: main.rs
ftp_server/src/ftp/: command.rs  config.rs  handler_read.rs  handler_write.rs  mod.rs  response.rs  user_manage.rs
ftp_server/src/port/: mod.rs
ftp_server/src/system/: mod.rs
ftp_server/src/tcp/: mod.rs
user_manage/: Cargo.toml
user_manage/etc/: users.json
user_manage/src/: lib.rs
(+12 files in other folders)
