[package]
name = "user_manage"
version = "0.1.0"
authors = ["elr0p3 <ropefalora@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
serde_json = "1.0"
serde = { version = "1.0", features = ["derive"] }
chrono = "0.4.19"
